# tarkin

./: README.md  pyproject.toml
src/tarkin/: __init__.py  bmof.py  constructs.py  ds.py  flavor.py  main.py  root.py  wmi_class.py  wmi_class_data.py  wmi_data.py  wmi_method.py  wmi_object.py  wmi_property.py  wmi_qualifier.py  wmi_type.py
tarkin/: __init__.py  bmof.py  data.py  decompress.py  flavor.py  main.py  object.py  qualifier.py  root.py  type.py  variable.py
tests/: data.py  test_data.py  test_ds.py  test_flavor.py  test_qualifier.py  test_type.py  test_variable.py  wmi_simple_class.mof
tests/mof/: wmi_abstract_class.bmf  wmi_abstract_class.mof  wmi_class.bmf  wmi_class.mof  wmi_class_inheritance.bmf  wmi_class_inheritance.mof  wmi_class_with_array.bmf  wmi_class_with_array.mof  wmi_class_with_defaults.bmf  wmi_class_with_defaults.mof  wmi_class_with_object.bmf  wmi_class_with_object.mof  wmi_class_with_object_array.bmf  wmi_class_with_object_array.mof  wmi_class_without_anything.bmf  wmi_class_without_anything.mof  wmi_data_types.bmf  wmi_data_types.mof  wmi_data_types_instance.bmf  wmi_data_types_instance.mof  wmi_qualifier_flavors.bmf  wmi_qualifier_flavors.mof  wmi_simple_class.bmf  wmi_simple_instance.bmf  wmi_simple_instance.mof  wmi_void_method.bmf  wmi_void_method.mof
tests/mof/evaluation/classes/: classes.bmf  classes.mof
tests/mof/evaluation/data_types/: arrays.bmf  arrays.mof  data_types.bmf  data_types.mof
tests/mof/evaluation/methods/: methods.bmf  methods.mof
tests/mof/evaluation/pragmas/: pragmas.bmf  pragmas.mof
tests/mof/evaluation/properties/: properties.bmf  properties.mof
tests/mof/evaluation/qualifiers/: qualifier_flavors.bmf  qualifier_flavors.mof  qualifiers.bmf  qualifiers.mof
tests/mof/pragma/: wmi_pragma_amendment.mof  wmi_pragma_autorecover.bmf  wmi_pragma_autorecover.mof  wmi_pragma_classflags.bmf  wmi_pragma_classflags.mof  wmi_pragma_deleteclass.mof  wmi_pragma_deleteinstance.mof  wmi_pragma_instanceflags.bmf  wmi_pragma_instanceflags.mof  wmi_pragma_namespace.bmf  wmi_pragma_namespace.mof
