[project]
name = "tarkin"
version = "0.0.1"
description = "Tool for parsing Grand MOF(F)s"
requires-python = ">=3.11"
keywords = [
    "WMI",
    "BMOF"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    # TODO
]

[project.optional-dependencies]
extra = [
    # TODO
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[[project.authors]]
name = "Armin Wolf"
email = "W_Armin@gmx.de"

[project.urls]
Repository = "https://github.com/Wer-Wolf/tarkin"
Bugtracker = "https://github.com/Wer-Wolf/tarkin/issues"

[project.scripts]
eppidtool = "tarkin.main:main_cli"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
eppidtool = [
    "py.typed"
]

[tool.mypy]
disallow_any_unimported = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true